--- a/service-gateway-API/src/main/resources/application.yml
+++ b/service-gateway-API/src/main/resources/application.yml
@@ -6,18 +6,18 @@ spring:
       ribbon:
         enabled: false
     gateway:
-#      default-filters:
-#        - name: Retry
-#          args:
-#            retries: 3
-#            methods: GET
-#            series: SERVER_ERROR
-#            exceptions: java.io.IOException
-#            backoff:
-#              firstBackoff: 50ms
-#              maxBackOff: 500ms
-#              factor: 2
-#              basedOnPreviousValue: false
+      default-filters:
+        - name: Retry
+          args:
+            retries: 3
+            methods: GET
+            series: SERVER_ERROR
+            exceptions: java.io.IOException
+            backoff:
+              firstBackoff: 50ms
+              maxBackOff: 500ms
+              factor: 2
+              basedOnPreviousValue: false
       discovery:
         locator:
           enabled: true
@@ -43,3 +43,48 @@ management:
     web:
       exposure:
         include: "*"
+
+resilience4j.circuitbreaker:
+  instances:
+    alfa:
+      registerHealthIndicator: true
+      slidingWindowSize: 100
+    beta:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 3
+      slidingWindowType: TIME_BASED
+      minimumNumberOfCalls: 20
+      waitDurationInOpenState: 50s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
+      recordFailurePredicate: io.github.robwin.exception.RecordFailurePredicate
+
+resilience4j.retry:
+  instances:
+    alfa:
+      maxAttempts: 3
+      waitDuration: 10s
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      retryExceptions:
+        - org.springframework.web.client.HttpServerErrorException
+        - java.io.IOException
+      ignoreExceptions:
+        - io.github.robwin.exception.BusinessException
+    beta:
+      maxAttempts: 3
+      waitDuration: 10s
+      retryExceptions:
+        - org.springframework.web.client.HttpServerErrorException
+        - java.io.IOException
+      ignoreExceptions:
+        - io.github.robwin.exception.BusinessException
+
+resilience4j.bulkhead:
+  instances:
+    alfa:
+      maxConcurrentCalls: 10
+    beta:
+      maxWaitDuration: 10ms
+      maxConcurrentCalls: 20
