--- a/services/alfa/pom.xml
+++ b/services/alfa/pom.xml
@@ -19,7 +19,10 @@
 		<resilience4j.version>1.7.0</resilience4j.version>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-spring-boot2</artifactId>
