--- a/eureka-naming-server/src/main/resources/application.properties
+++ b/eureka-naming-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=eureka-naming-server
 server.port=8761
 
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
