--- a/service-gateway-API/src/main/resources/application.properties
+++ b/service-gateway-API/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=service-gateway-API
 server.port=8080
 
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
+
+logging.level.org.springframework.web.servlet.DispatcherServlet=debug
