--- a/services/alfa/src/main/resources/application.properties
+++ b/services/alfa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=alfa
 server.port=8002
 
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
