--- a/services/beta/src/main/resources/application.properties
+++ b/services/beta/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=beta
 server.port=8001
 
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
