--- a/services/limits-service/pom.xml
+++ b/services/limits-service/pom.xml
@@ -79,9 +79,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
+						<!--		<executions>
 					<execution>
-						<goals>
+              						<goals>
 							<goal>repackage</goal>
 						</goals>
 						<configuration>
@@ -91,7 +91,7 @@
 							</mainClass>
 						</configuration>
 					</execution>
-				</executions>
+				</executions>-->
 			</plugin>
 		</plugins>
 	</build>
