--- a/services/limits-service/src/main/resources/application.properties
+++ b/services/limits-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=limits-service
 server.port=8887
 
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
