--- a/services/oauth-jws-jwk-legacy/pom.xml
+++ b/services/oauth-jws-jwk-legacy/pom.xml
@@ -89,7 +89,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
+            		<!--		<executions>
               <execution>
                 <phase>integration-test</phase>
                 <goals>
@@ -104,7 +104,7 @@
                   </includes>
                 </configuration>
               </execution>
-            </executions>
+            </executions>-->
             <configuration>
               <systemPropertyVariables>
                 <test.mime>json</test.mime>
@@ -122,7 +122,7 @@
           <plugin>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-maven2-plugin</artifactId>
-            <executions>
+            		<!--		<executions>
               <execution>
                 <id>start-server</id>
                 <phase>pre-integration-test</phase>
@@ -137,13 +137,13 @@
                   <goal>stop</goal>
                 </goals>
               </execution>
-            </executions>
+            </executions>-->
           </plugin>
 
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
+            		<!--		<executions>
               <execution>
                 <phase>integration-test</phase>
                 <goals>
@@ -161,7 +161,7 @@
                   </systemPropertyVariables>
                 </configuration>
               </execution>
-            </executions>
+            </executions>-->
           </plugin>
 
         </plugins>
